# Filler

./: ._Get_Next_Line  ._resources  CMakeLists.txt  Makefile  a.out  filler  filler.c  filler.h  filler.h.gch  get_next_line.h  get_next_line.h.gch  main.c  my_trun.c  my_turn.c  test.txt  work_with_ned.c  work_with_piece.c  work_with_plateau.c
resources/: ._filler.trace  ._filler_vm  ._maps  filler.trace
